@@ -992,3 +992,4 @@ Ensure that resource limits (CPU, RAM and procesess) are never set for the Apach
 Plugins can now define additional inputs to appear on the Create Virtual Server page and accepted by create-domain.pl, for options specific to the plugin's feature.
 The master administrator can now grant himself access to scripts disabled for regular users, with a new form on the Script Installers page.
 When the user or group for a domain is changed, references to the old user or group in lgorotate.conf are updated to the new values.
+Re-try S3 bucket creation three times if at first it fails, to avoid temporary outages or network problems.
